@@ -1,0 +1,3 @@
+package SPVM::Comparator::String : callback_t {
+  sub : int ($self : self, $a : string, $b : string);
+}
